[SVG2] Elements that don't render shouldn't contribute to ancestor bboxes.

Based on Nikos Andronikos' patch in https://bugs.webkit.org/show_bug.cgi?id=134184.

SVG elements that have rendering disabled should not contribute to any ancestor elements bounding box.
Examples of elements with rendering disabled:
  - basic shape with width <= 0 or height <= 0
  - path with no path data (d attribute missing or empty)
  - polyline or polygon element with no point data (points attribute missing or empty)

BUG=388676

Review URL: https://codereview.chromium.org/355813004

git-svn-id: svn://svn.chromium.org/blink/trunk@176972 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: e43817d43206936424065e82ba7351cdc4d9b01a